--- a/index.html
+++ b/index.html
@@ -13,31 +13,36 @@
 
         <label>
             Nome da Task:
-            <input type="text" id="inp-task-name" />
-        </label>
-        <label>
-            Texto da Task após resolver:
-            <input type="text" id="inp-task-text" />
+            <input type="text" id="inp-task-name" value="default"/>
         </label>
         <label>
             Delay da Task em segundos:
-            <input type="number" id="inp-task-delay" />
+            <input type="number" id="inp-task-delay" value="3"/>
+        </label>
+        <label>
+            Texto da Task após resolver:
+            <input type="text" id="inp-task-text" value="default_text"/>
         </label>
         <button type="submit" id="btn-submit">Add Task</button>
     </form>
 
     <main id="app">
-        <section id="task-container">
+        <section id="task-container" class="task-div">
             <h4>Fila de Tasks</h4>
-            <div id="task-container-queue" class="task-div">
+            <div id="task-container-queue">
             </div>
             <h4>Próxima a ser executada</h4>
-            <div id="task-container-next" class="task-div">
+            <div id="task-container-next">
             </div>
+                <div class="outer-timer">
+                    <div class="inner-timer"></div>
+                </div>
         </section>
         <section id="task-messages">
         </section>
     </main>
+        <button id="btn-queue-next">Executar próxima Task</button>
+        <button id="btn-queue-submit">Executar fila de Tasks</button>
     <script src="async-queue.js"></script>
 </body>
 
